Tutaria do youtube

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,1 +1,19 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/style.css" />
+    <title>Website pessoal | Joabson Baista Silva</title>
+  </head>
+  <body>
+    <div id="header">
+      <div class="container">
+        <img src="/assets/img/fotos/images/logo.png" alt="logo" />
+      </div>
+    </div>
+    s
+
+    <script src="./script.js"></script>
+  </body>
+</html>
